2006-09-17  Patrick van Staveren  <trick@vanstaveren.us>

	* src/Banshee.Dap/Mtp/GPhotoDevice.cs: dispose CameraFile objects when
	sending a track to (hopefully) free up memory, dispose all objects
	regardless (now that Dispose is safe in libgphoto2-sharp), and catch
	doubly-disposing of the GPhotoDevice object.

	* src/Banshee.Dap/Mtp/GPhotoDeviceFile.cs: add method DisposeCameraFile,
	and only access the private camera_file as this was causing it to retrieve
	all camera files when we tried to dispose the GPhotoDevice.

	* src/Banshee.Dap/Mtp/MtpDap.cs: update save progress to zero before
	sending or deleting any tracks.

2006-09-17  Patrick van Staveren  <trick@vanstaveren.us>

	* src/Banshee.Dap/Mtp/GPhotoDeviceFile.cs: added metadata exception
	handling - now handles unparseable metadata.

	* src/Banshee.Dap/Mtp/MtpDap.cs: Better debug messages,
	WaitForPropertyChange when device seems inaccessable

	* src/Banshee.Dap/Mtp/MtpDeviceId.cs: added 14 new device IDs

	* src/Banshee.Dap/Mtp/Banshee.Dap.Mtp.mdp: MonoDevelop project created

2006-09-17  Aaron Bockover  <abock@gnome.org>

	* src/Makefile.am:
	* src/Banshee.Hyena/Makefile.am: Do not build SourceView.cs

	* src/Banshee.Base/Makefile.am: Added Gui/SourceView.cs

	* src/SourceView.cs: Removed; had GNOME sysadmin copy with history to
	src/Banshee.Base/Gui/SourceView.cs

	* src/Banshee.Base/Gui/SourceView.cs: Changed namespace to Banshee.Gui

2006-09-17  Aaron Bockover  <abock@gnome.org>

	* libbanshee/nautilus-burn.c (nautilus_glue_burn_drive_get_for_device): 
	Use return nautilus_burn_drive_new_from_path for <2.16; CD burning
	now works properly for 2.12 again

	* libbanshee/nautilus-burn.c:
	* src/Banshee.Base/Banshee.Burner/BurnerCore.cs:
	* src/Banshee.Base/Banshee.Cdrom.Nautilus.Interop/BurnDrive.cs:
	* src/Banshee.Base/Banshee.Cdrom.Nautilus.Interop/BurnRecorder.cs:
	* src/Banshee.Base/Banshee.Cdrom.Nautilus.Interop/BurnRecorderHandlers.cs: